--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,8 +15,6 @@ body {
   line-height: 1.43;
   font-family: Manrope, sans-serif !important;
   color: #000;
-  background-image: url("../assets/background.svg");
-  background-size: cover;
   min-height: 100vh;
 }
 
@@ -65,7 +63,6 @@ textarea {
 
 img {
   display: flex;
-  max-width: 150px;
   height: auto;
   margin: 0 auto;
 }
@@ -207,9 +204,8 @@ img.logo {
   max-width: 100vw;
   grid-area: content;
   overflow: hidden;
-  display: flex;
-  align-items: center;
   justify-content: center;
+  z-index: 666;
 }
 
 .site-header {
@@ -217,17 +213,12 @@ img.logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*padding-top: 24px;*/
-  padding-top: 85px;
-  /*padding-bottom: 24px;*/
+  z-index: 1;
 }
 
 .field-group {
   max-width: 423px;
   margin: 0 auto 25px;
-}
-.content {
-  margin-top: 25px;
 }
 .field-group
   input:not([type="radio"]):not([type="checkbox"]):not([type="submit"]):not([type="reset"]) {
@@ -312,6 +303,8 @@ input[type="submit"]:hover,
   line-height: 42px;
   text-align: center;
   color: #262626;
+  margin-bottom: 6px;
+  float: top;
 }
 
 .error-msg {
@@ -337,7 +330,7 @@ input[type="submit"]:hover,
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  padding-bottom: 19px;
 }
 
 .win-page-error {
@@ -345,7 +338,6 @@ input[type="submit"]:hover,
   font-family: Manrope;
   font-style: normal;
   font-weight: 500;
-  font-size: 12px;
   line-height: 16px;
   color: #db5555;
 }
@@ -397,51 +389,42 @@ input[type="submit"]:hover,
   cursor: pointer;
 }
 
-/*
-.win-button.disabled {
-  background: #f9fafa;
-  color: #a7a7a7;
-}
-*/
-
 .button-wrap {
   display: flex;
   justify-content: center;
 }
 
-/*.site-logo { padding-top: 100px; }*/
-
 .main-area .grid {
-  /*max-width: 567px;*/
-  /*max-width: 45vh;*/
   min-width: 290px;
   width: calc(100% - 30px);
   margin: 0 auto;
   max-width: 70vh;
+  transform: translateY(6%);
 }
-.main-area .clues {
+.main-area .clues, .main-area #small-stuff {
   background: #f5f5f5;
   display: flex;
   justify-content: center;
-  padding: 60px 0;
+  padding: 19px 51px 19px 6px;
   margin: 0 auto;
-  max-width: 90%;
+  max-width: 93%;
   border-radius: 19px;
-  box-shadow: 6px 6px lightslategrey;
-  border: 1px solid lightslategray;
+  /*box-shadow: 6px 6px lightslategrey;*/
+  border: 1px solid black;
+  min-width: 800px
 }
-.main-area .clues .direction {
+.main-area .direction {
   margin: 0 6px;
   font-size: 14px;
   width: 50%;
 }
-.main-area .clues .direction h3 {
-  font-size: 14px;
+.main-area .direction h3 {
+  font-size: 19px;
   color: #000;
 }
 
 .main-area .grid [text-anchor="start"] {
-  font-size: 41% !important;
+  font-size: 51% !important;
 }
 
 .main-area .styles_WrapperUi__2TxXl {
@@ -467,11 +450,18 @@ input[type="submit"]:hover,
   font-family: Manrope;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 19px;
   line-height: 22px;
   text-align: center;
 
   color: #262626;
+}
+
+.successful-text a {
+  color: #5f8afa;
+}
+.successful-text a:visited {
+  color: #7d9cf5;
 }
 
 .success-links {
@@ -549,7 +539,6 @@ input[type="submit"]:hover,
 }
 
 .field-group-border-top {
-  border-top: 1px solid #ccc;
   margin-top: 25px;
   padding-top: 25px;
 }
@@ -577,12 +566,18 @@ input[type="submit"]:hover,
   font-family: Manrope;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 19px;
   line-height: 22px;
   text-align: center;
+  margin: 6px;
+  margin-bottom: 19px;
   color: #262626;
 }
 
 div.bottom {
   min-height: 19px;
+}
+
+.site-logo > img {
+  width: 251px;
 }
